fix: gamemode value type, added tab completers